--- a/resurrector.html.md.erb
+++ b/resurrector.html.md.erb
@@ -91,6 +91,6 @@ To disable the Resurrector:
 Since scan and fix tasks on the Director are regular tasks, you can use `bosh tasks --no-filter` command to view currently running/queued Resurrector's activity and `bosh tasks recent --no-filter` to view finished tasks.
 
 ---
-[Back to Table of Contents](toc.html#hm)
+Next: [Persistent disk snapshotting](snapshots.html)
 
 Previous: [Manual repair with Cloud Check](cck.html)
