--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -66,13 +66,13 @@ title: Index
  * [Process monitoring with Monit](vm-monit.html)
  * [Manual repair with Cloud Check](cck.html)
  * [Automatic repair with Resurrector](resurrector.html)
- * Snapshotting
+ * [Persistent disk snapshotting](snapshots.html)
 
-### <a id="vm-config"></a> VM Configuration (Looking inside a BOSH Deployment)
+### <a id="vm-config"></a> VM Configuration (Looking inside a Deployment)
 
  * [Structure of a BOSH VM](vm-struct.html)
     * [VM Configuration Locations](vm-config.html)
- * Location and use of logs
+ * [Location and use of logs](job-logs.html)
  * Debugging issues with jobs
 
 ---
@@ -89,7 +89,7 @@ title: Index
 ## Using BOSH to package software (i.e. Creating a BOSH release)
 
  * What is a release?
-    * Creating a release
+    * [Creating a release](create-release.html)
     * Testing with dev releases
     * Cutting final releases
        * Versioning of releases
@@ -98,7 +98,7 @@ title: Index
     * Job properties
     * [Drain scripts](drain-scripts.html)
  * What is a package?
-    * Creating a package
+    * [Creating a package](packages.html)
     * Relationship to release blobs
  * How do releases, jobs, and packages interact?
  * Managing release repository
