remove tutorial section

--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -76,17 +76,7 @@ title: Index
  * Debugging issues with jobs
 
 ---
-## Tutorial for deploying from scratch
-
- * Creating manifest line by line from scratch
- * Locating packages/releases/stemcells
-    * Where does the release tarball come from?
- * Uploading stemcells and releases
- * Deploying
- * Checking that it worked
-
----
-## Using BOSH to package software (i.e. Creating a BOSH release)
+## Using BOSH to package and distribute software
 
  * What is a release?
     * [Creating a release](create-release.html)
