move toc -> index

--- a/bootstrap.html.md.erb
+++ b/bootstrap.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Boostrapping an environment / What is MicroBOSH?
+title: Bootstrapping an environment / What is MicroBOSH?
 ---
 
 MicroBOSH is a single-VM BOSH environment that includes all necessary BOSH components. It is the primary way to deploy the [BOSH Director](bosh-components.html#director) and its supporting components to an IaaS to start managing deployments.
