--- a/deploy-microbosh-to-openstack.html.md.erb
+++ b/deploy-microbosh-to-openstack.html.md.erb
@@ -288,3 +288,8 @@ If other error messages appear:
 
 * Check your deployment manifest for typographical or formatting errors.
 * Review your OpenStack configuration.
+
+---
+[Back to Table of Contents](index.html#install)
+
+Previous: [Bootstrapping an environment](bootstrap.html)
