--- a/deploy-microbosh-to-vsphere.html.md.erb
+++ b/deploy-microbosh-to-vsphere.html.md.erb
@@ -177,3 +177,8 @@ If other error messages appear:
 
 * Check your `microbosh.yml` for errors.
 * Review your vSphere configuration.
+
+---
+[Back to Table of Contents](index.html#install)
+
+Previous: [Bootstrapping an environment](bootstrap.html)
