--- a/deploying.html.md.erb
+++ b/deploying.html.md.erb
@@ -39,6 +39,6 @@ Task 10326 done
 </pre>
 
 ---
-[Back to Table of Contents](toc.html#basic-deploy)
+[Back to Table of Contents](index.html#basic-deploy)
 
 Previous: [Uploading Releases](uploading-releases.html)
