--- a/deployment.html.md.erb
+++ b/deployment.html.md.erb
@@ -33,6 +33,6 @@ resource_pools:
 <sup>[1]: There are differences in the deployment manifest depending on which IaaS is used. These differences capture IaaS specific features that the operator decides to use.</sup>
 
 ---
-[Back to Table of Contents](toc.html#intro)
+[Back to Table of Contents](index.html#intro)
 
 Previous: [What is a Release?](release.html)
