--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -366,3 +366,8 @@ If other error messages appear:
 
 * Check your `microbosh.yml` for errors.
 * Review your AWS configuration.
+
+---
+[Back to Table of Contents](index.html#install)
+
+Previous: [Bootstrapping an environment](bootstrap.html)
