--- a/vm-config.html.md.erb
+++ b/vm-config.html.md.erb
@@ -68,7 +68,7 @@ It's discouraged to modify or rely on the contents of this directory.
 * `/var/vcap/monit/monit.log`: Monit activity log. Includes information about starts, stops, restarts, etc. of release job processes monitored by Monit.
 
 ---
-[Back to Table of Contents](toc.html#vm-config)
+[Back to Table of Contents](index.html#vm-config)
 
 Previous: [Structure of a BOSH VM](vm-struct.html)
 
