Correcting a link and removing a reference to a non-existent page

--- a/disaster-recovery.html.md.erb
+++ b/disaster-recovery.html.md.erb
@@ -99,7 +99,7 @@ steps to take if automatic measures fail.
 
 ## <a id="automatic"></a>Automatic Recovery ##
 
-BOSH uses the BOSH [Resurrector](./bosh-resurrector.html) to help it recover
+BOSH uses the BOSH [Resurrector](./resurrector.html) to help it recover
 from many issues.
 The Resurrector automatically instructs the BOSH
 [Director](./terminology.html#director) to rebuild unresponsive VMs unless the
