Adding a topic on deploying microbosh to vcloud, from content that was located in a different docs repo, and correcting a link

--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -16,7 +16,7 @@ If you are using AWS, OpenStack, or vSphere, refer to the IaaS-specific tutorial
 
 * [Deploying MicroBOSH to AWS](./deploy-microbosh-to-aws.html)
 * [Deploying MicroBOSH to OpenStack](./deploy-microbosh-to-openstack.html)
-* [Deploying MicroBOSH to vSphere](/deploying/vsphere/deploying_micro_bosh.html)
+* [Deploying MicroBOSH to vSphere](./deploy-microbosh-to-vsphere.html)
 
 ## <a id="create-manifest"></a> Advanced Configuration ##
 
