--- a/setup-aws.html.md.erb
+++ b/setup-aws.html.md.erb
@@ -125,7 +125,7 @@ environment variables for the current shell.
 
 ##<a id="infrastructure"></a>Step 6: (Optional) Create AWS Infrastructure ##
 
-<p class="note"><strong>Note</strong>: `bosh aws create` command was originally created to quikly set up development accounts. We do not recommend using for any long-lived environments.</p>
+<p class="note"><strong>Note</strong>: The <code>bosh aws create</code> command was originally created to quickly set up development accounts. We do not recommend using this command for any long-lived environments.</p>
 
 <p class="note"><strong>Note</strong>: Skip this step if you are only deploying MicroBOSH, not BOSH.</p>
 
