mention juno for openstack

--- a/deploy-microbosh-to-openstack.html.md.erb
+++ b/deploy-microbosh-to-openstack.html.md.erb
@@ -70,10 +70,9 @@ To prepare your OpenStack project for deploying MicroBOSH, use the OpenStack GUI
 ### <a id="prerequisites"></a>Prerequisites ###
 
 1. An OpenStack environment running one of the following supported releases:
-    * [Folsom](http://www.openstack.org/software/folsom/)
-    * [Grizzly](http://www.openstack.org/software/grizzly)
     * [Havana](http://www.openstack.org/software/havana)
     * [Icehouse](http://www.openstack.org/software/icehouse)
+    * [Juno](http://www.openstack.org/software/juno)
     <br /><br />
 
 1. The following OpenStack services:
